tests/baselines/reference/tsxReactEmit7.errors.txt
tests/cases/conformance/jsx/tsxReactEmit7.tsx(9,10): error TS2304: Cannot find name 'React'.
tests/cases/conformance/jsx/tsxReactEmit7.tsx(10,10): error TS2304: Cannot find name 'React'.
tests/cases/conformance/jsx/tsxReactEmit7.tsx(11,10): error TS2304: Cannot find name 'React'.
tests/cases/conformance/jsx/tsxReactEmit7.tsx(12,10): error TS2304: Cannot find name 'React'.
tests/cases/conformance/jsx/tsxReactEmit7.tsx(15,10): error TS2304: Cannot find name 'React'.
tests/cases/conformance/jsx/tsxReactEmit7.tsx(16,10): error TS2304: Cannot find name 'React'.
tests/cases/conformance/jsx/tsxReactEmit7.tsx(17,10): error TS2304: Cannot find name 'React'.
tests/cases/conformance/jsx/tsxReactEmit7.tsx(18,10): error TS2304: Cannot find name 'React'.
tests/cases/conformance/jsx/tsxReactEmit7.tsx(19,10): error TS2304: Cannot find name 'React'.


==== tests/cases/conformance/jsx/tsxReactEmit7.tsx (9 errors) ====
    
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    		[s: string]: any;
    	}
    }
    
    var m = <div x-y="val"></div>;
             ~~~
!!! error TS2304: Cannot find name 'React'.
    var n = <div xx-y="val"></div>;
             ~~~
!!! error TS2304: Cannot find name 'React'.
    var o = <div x-yy="val"></div>;
             ~~~
!!! error TS2304: Cannot find name 'React'.
    var p = <div xx-yy="val"></div>;
             ~~~
!!! error TS2304: Cannot find name 'React'.
    
    // Investigation
    var a = <div x="val"></div>;
             ~~~
!!! error TS2304: Cannot find name 'React'.
    var b = <div xx="val"></div>;
             ~~~
!!! error TS2304: Cannot find name 'React'.
    var c = <div xxx="val"></div>;
             ~~~
!!! error TS2304: Cannot find name 'React'.
    var d = <div xxxx="val"></div>;
             ~~~
!!! error TS2304: Cannot find name 'React'.
    var e = <div xxxxx="val"></div>;
             ~~~
!!! error TS2304: Cannot find name 'React'.
    